<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">
    <TextView
        android:id="@+id/question_text_view"
        android:layout_width="wrap_content"
        android:textSize="20sp"
        android:maxLines="10"
        android:textColor="@color/black"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:text="@string/question_australia" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/true_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/true_button"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/false_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/false_button"/>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/cheat_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_margin="10dp"
        android:text="@string/cheat_button" />
    <TextView
        android:id="@+id/numbers_of_hints_text_view"
        android:layout_width="wrap_content"
        android:textSize="20sp"
        android:maxLines="10"
        android:textColor="@color/black"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:text="@string/number_of_hints" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/prev_button"
            android:src="@drawable/ic_baseline_navigate_before_24"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="10dp"/>

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/next_button"
            android:src="@drawable/ic_baseline_navigate_next_24"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="10dp"/>
    </LinearLayout>
</LinearLayout>